namespace BurgerPOS.Domain.Administracion.Enums;

public enum TipoEvento
{
    Login,
    Logout,
    AltaProducto,
    EdicionPrecio,
    CambioCampania,
    AperturaTurno,
    CierreTurno,
    Venta,
    AnulacionVenta,
    CancelacionOrden,
    EntradaInventario,
    Merma,
    AjusteSaldo,
    ConfiguracionEstablecimiento
}
