namespace BurgerPOS.Domain.Catalogo.Enums;

public enum EstadoCampania
{
    Borrador,
    Programada,
    Activa,
    Pausada,
    Expirada
}
