namespace BurgerPOS.Domain.Ordenes.Enums;

public enum EstadoOrden
{
    Borrador,
    EnviadaACocina,
    EnPreparacion,
    Lista,
    Entregada,
    Cobrada,
    Cancelada
}
