@startuml clases
' ======================================================================
' BurgerPOS - Diagrama de Clases v1 (Entrega 1)
' Vista del modelo de dominio. Atributos clave y relaciones.
' No incluye todos los metodos CRUD, solo operaciones de dominio.
' ======================================================================

title BurgerPOS - Diagrama de Clases (modelo de dominio v1)

skinparam shadowing false
skinparam classFontSize 11
skinparam classAttributeIconSize 10
skinparam class {
  BackgroundColor #F8F8F8
  BorderColor #2E6FAC
  ArrowColor #555
}
skinparam package {
  BackgroundColor #FFFEF7
  BorderColor #B8860B
}

' =================================================================
' IDENTIDAD Y SESION
' =================================================================
package "Identidad" {

  enum Rol {
    Administrador
    Operador
  }

  enum RolOperativo {
    Cocinero
    Mesero
    EncargadoCobro
  }

  class Usuario {
    +id : Guid
    +nombreUsuario : string
    +nombreCompleto : string
    +passwordHash : string
    +rol : Rol
    +activo : bool
    +fechaAlta : DateTime
    --
    +cambiarPassword()
    +desactivar()
  }

  class SesionUsuario {
    +id : Guid
    +usuarioId : Guid
    +rolOperativo : RolOperativo
    +inicio : DateTime
    +fin : DateTime?
    --
    +cerrar()
  }

  Usuario "1" -- "*" SesionUsuario : abre >
  SesionUsuario --> RolOperativo
  Usuario --> Rol
}

' =================================================================
' CATALOGO
' =================================================================
package "Catalogo" {

  class Categoria {
    +id : Guid
    +nombre : string
    +ordenVisual : int
  }

  class Producto {
    +id : Guid
    +nombre : string
    +descripcion : string
    +precioBase : decimal
    +categoriaId : Guid
    +disponible : bool
    +activo : bool
    --
    +marcarNoDisponible()
    +calcularPrecioConModificadores(mods)
  }

  class Combo {
    +id : Guid
    +nombre : string
    +precioEspecial : decimal
    +activo : bool
    --
    +calcularAhorro()
  }

  class ComponenteCombo {
    +cantidad : int
  }

  class Modificador {
    +id : Guid
    +productoId : Guid
    +nombre : string
    +deltaPrecio : decimal
  }

  class Receta {
    +id : Guid
    +productoId : Guid
  }

  class LineaReceta {
    +insumoId : Guid
    +cantidad : decimal
  }

  enum TipoDescuento {
    Porcentaje
    MontoFijo
  }

  enum AlcanceDescuento {
    TodaVenta
    Categoria
    Producto
  }

  enum EstadoCampania {
    Borrador
    Programada
    Activa
    Pausada
    Expirada
  }

  class CampaniaDescuento {
    +id : Guid
    +nombre : string
    +tipo : TipoDescuento
    +valor : decimal
    +alcance : AlcanceDescuento
    +fechaInicio : DateTime
    +fechaFin : DateTime
    +diasSemana : int[]
    +horaInicio : TimeSpan?
    +horaFin : TimeSpan?
    +estado : EstadoCampania
    --
    +estaVigente(momento) : bool
    +pausar()
  }

  class DatosEstablecimiento {
    +id : Guid
    +nombreComercial : string
    +direccion : string
    +telefono : string
    +rfc : string?
    +leyendaTicket : string?
    +fechaActualizacion : DateTime
  }

  Producto --> Categoria
  Producto "1" -- "*" Modificador : ofrece >
  Producto "1" -- "1" Receta : define >
  Receta "1" *-- "*" LineaReceta : contiene
  Combo "1" *-- "*" ComponenteCombo
  ComponenteCombo --> Producto : compuesto por >
  CampaniaDescuento --> TipoDescuento
  CampaniaDescuento --> AlcanceDescuento
  CampaniaDescuento --> EstadoCampania
}

' =================================================================
' INVENTARIO
' =================================================================
package "Inventario" {

  enum UnidadMedida {
    Piezas
    Kilogramos
    Litros
    Gramos
  }

  enum MotivoMerma {
    QuemadoOdannado
    CaidoOderramado
    Caducidad
    Otro
  }

  class Insumo {
    +id : Guid
    +nombre : string
    +unidad : UnidadMedida
    +saldoActual : decimal
    +nivelAlerta : decimal
    +activo : bool
    --
    +descontar(cantidad)
    +incrementar(cantidad)
    +estaEnAlerta() : bool
  }

  class EntradaInventario {
    +id : Guid
    +insumoId : Guid
    +cantidad : decimal
    +usuarioId : Guid
    +fecha : DateTime
    +proveedor : string?
    +costo : decimal?
  }

  class Merma {
    +id : Guid
    +insumoId : Guid
    +cantidad : decimal
    +motivo : MotivoMerma
    +descripcion : string?
    +usuarioId : Guid
    +fecha : DateTime
  }

  class AjusteSaldo {
    +id : Guid
    +insumoId : Guid
    +cantidadAnterior : decimal
    +cantidadNueva : decimal
    +diferencia : decimal
    +motivo : string
    +adminId : Guid
    +fecha : DateTime
  }

  Insumo --> UnidadMedida
  Insumo "1" -- "*" EntradaInventario : recibe >
  Insumo "1" -- "*" Merma : pierde por >
  Insumo "1" -- "*" AjusteSaldo : se ajusta >
  Merma --> MotivoMerma
  LineaReceta --> Insumo : consume >
}

' =================================================================
' OPERACION DE ORDENES
' =================================================================
package "Ordenes" {

  enum ModalidadServicio {
    Mesa
    Mostrador
    ParaLlevar
  }

  enum EstadoOrden {
    Borrador
    EnviadaACocina
    EnPreparacion
    Lista
    Entregada
    Cobrada
    Cancelada
  }

  enum EstadoMesa {
    Libre
    Ocupada
    ConCuentaAbierta
    PorLimpiar
  }

  class Mesa {
    +id : Guid
    +numero : int
    +estado : EstadoMesa
  }

  class Orden {
    +id : Guid
    +folioOrden : int
    +modalidad : ModalidadServicio
    +mesaId : Guid?
    +estado : EstadoOrden
    +fechaCreacion : DateTime
    +operadorId : Guid
    +subtotal : decimal
    --
    +agregarLinea(producto, cantidad)
    +enviarACocina()
    +marcarLista()
    +entregar()
    +cancelar(motivo)
  }

  class LineaOrden {
    +id : Guid
    +ordenId : Guid
    +productoId : Guid?
    +comboId : Guid?
    +cantidad : int
    +precioUnitario : decimal
    +notaLibre : string?
    --
    +calcularImporte() : decimal
  }

  class LineaModificador {
    +modificadorId : Guid
    +deltaAplicado : decimal
  }

  Orden --> ModalidadServicio
  Orden --> EstadoOrden
  Orden "1" *-- "*" LineaOrden : compuesta por
  LineaOrden "1" *-- "*" LineaModificador
  LineaOrden --> Producto : referencia >
  LineaOrden --> Combo : o referencia >
  Orden "*" -- "0..1" Mesa : asignada a >
  Mesa --> EstadoMesa
}

' =================================================================
' COBRO Y VENTA
' =================================================================
package "Cobro" {

  enum MetodoPago {
    Efectivo
    Tarjeta
  }

  class Venta {
    +id : Guid
    +folio : int  // RN-02
    +ordenId : Guid
    +fechaCobro : DateTime
    +operadorId : Guid
    +turnoCajaId : Guid
    +subtotal : decimal
    +montoDescuento : decimal
    +baseGravable : decimal
    +iva : decimal
    +propina : decimal
    +total : decimal
    +anulada : bool
    --
    +anular(motivo, admin)
  }

  class Pago {
    +id : Guid
    +ventaId : Guid
    +metodo : MetodoPago
    +montoRecibido : decimal?
    +cambio : decimal?
    +comisionBancaria : decimal?
    +descuentoAplicadoId : Guid?
  }

  class DescuentoAplicado {
    +id : Guid
    +campaniaId : Guid
    +ventaId : Guid
    +montoCalculado : decimal
  }

  class Ticket {
    +id : Guid
    +ventaId : Guid
    +contenidoSnapshot : string  // datos historicos
    +fechaEmision : DateTime
  }

  Venta "1" -- "1" Pago : tiene >
  Pago --> MetodoPago
  Venta "1" -- "0..1" DescuentoAplicado : con descuento >
  DescuentoAplicado --> CampaniaDescuento
  Venta "1" -- "1" Ticket : genera >
  Orden "1" -- "0..1" Venta : se cobra como >
}

' =================================================================
' TURNO DE CAJA
' =================================================================
package "Turno" {

  enum EstadoTurno {
    Abierto
    EnOperacion
    ArqueoEnProceso
    Cerrado
  }

  class TurnoCaja {
    +id : Guid
    +fondoInicial : decimal
    +fechaApertura : DateTime
    +fechaCierre : DateTime?
    +operadorAperturaId : Guid
    +operadorCierreId : Guid?
    +efectivoEsperado : decimal
    +efectivoContado : decimal?
    +diferencia : decimal?
    +estado : EstadoTurno
    +observaciones : string?
    --
    +arquear(contado)
    +cerrar()
  }

  TurnoCaja --> EstadoTurno
  Venta --> TurnoCaja : pertenece a >
}

' =================================================================
' CONFIGURACION Y AUDITORIA
' =================================================================
package "Administracion" {

  enum TipoEvento {
    Login
    Logout
    AltaProducto
    EdicionPrecio
    CambioCampania
    AperturaTurno
    CierreTurno
    Venta
    AnulacionVenta
    CancelacionOrden
    EntradaInventario
    Merma
    AjusteSaldo
    ConfiguracionEstablecimiento
  }

  class BitacoraEvento {
    +id : Guid
    +timestamp : DateTime
    +usuarioId : Guid
    +rolOperativoDeclarado : RolOperativo?
    +tipo : TipoEvento
    +entidadAfectada : string
    +entidadId : Guid?
    +valorAnterior : string?
    +valorNuevo : string?
    +ipOrigen : string
  }

  BitacoraEvento --> TipoEvento
  BitacoraEvento --> Usuario : registra a >
}

@enduml
